--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: ember_crooks
 github_username:  ecrooks
 
 # Build settings
-# theme: cayman
+theme: cayman
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-feed
