--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: dbms-transcoder
-email: ember.crooks@gmail.com
+email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Providing cross-dbms translations of concepts and terminology. PRs welcome.
+  Sharing information on concept and terminology differences between dbms plarforms
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ember_crooks
@@ -29,10 +29,8 @@ github_username:  ecrooks
 
 # Build settings
 theme: cayman
-remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
