--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: Your awesome title
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A colaborative source for cross-dbms concept and terminology translation
 #baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dbms-transcoder.github.io/dbms-transcoder/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
@@ -33,6 +31,7 @@ github_username:  jekyll
 theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
+  - jekyll-tabs
 
 # Exclude from processing.
 # The following items will not be processed, by default.
