--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_username:  ecrooks
 theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
+  - jekyll-tabs
 
 # Exclude from processing.
 # The following items will not be processed, by default.
